# Digital-Design-Docs

./: .gitignore  README.md  deploy.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: doc.yml
docs/: board.md  clocking.md  faq.md  index.md  peripheral.md  project.md  quartus.md  reset.md  software.md  vivado.md
docs/hardware/: board.md  board_intel.md  board_xilinx.md  onboard.md  onboard_intel.md  onboard_xilinx.md  peripheral.md
docs/hdl/: bus.md  clocking.md  debug.md  peripheral.md  reset.md  tri.md
docs/hdl-by-example/: adder.md  button.md  coding_standard.md  counter.md  index.md  labs.md  model.md  overview.md  priority_encoder.md  rr_arbiter.md  simulation.md  timer.md
src/: .gitignore  process.py  synth.sh  synth_sv.sh  synth_v.sh  synth_vhdl.sh
src/examples/: adder.sv  adder.syn.v  adder.vhdl  adder_sv.syn.v  adder_tb.v  adder_vhdl.syn.v  button.sv  button.syn.v  button.v  button.vhdl  button_sv.syn.v  button_vhdl.syn.v  counter.syn.v  counter.v  counter.vhdl  counter_vhdl.syn.v  initial.syn.v  initial.v  initial.vhdl  initial_vhdl.syn.v  priority_encoder.syn.v  priority_encoder.v  priority_encoder.vhdl  priority_encoder_vhdl.syn.v  rr_arbiter.syn.v  rr_arbiter.v  rr_arbiter.vhdl  rr_arbiter_vhdl.syn.v  timer.syn.v  timer.v  timer.vhdl  timer_tb.v  timer_vhdl.syn.v
src/tests/: add2.syn.v  add2.v  and2.v  async_reset.syn.v  async_reset.v  async_reset_n.syn.v  async_reset_n.v  divide.syn.v  divide.v  fsm.sv  fsm_sv.syn.v  mux21a.v  mux2_1.v  sync_reset.syn.v  sync_reset.v  sync_reset_n.syn.v  toggle.v  (+2 more)
theme-override/: main.html
(+2 files in other folders)
