[tool.poetry]
name = "digital-design-docs"
version = "0.1.0"
description = ""
authors = ["Jiajie Chen <c@jia.je>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "9.1.6"
mkdocs-git-authors-plugin = "^0.7.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
